@@ -1,7 +1,7 @@
 Olivier ANDREOTTI: AIX, Solaris patches
 Thierry LACOSTE: BSD portage
 Didier LIROULET: Installation script
-Remi COLLET: bug fixes and Fedora/RedHat maintainer
+Remi COLLET: code, bug fixes, Fedora/RedHat maintainer and much more
 Walid NOUH: gave access to PowerPC hardware to help the portage, patches
 Olivier ROUSSY: minor patches 
 Dennis CABOOTER: FreeBSD maintainer
